# flask-praetorian

./: .gitignore  .project_metadata.json  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  main.yml
docs/: comparison.rst  conduct.rst  conf.py  contributing.rst  curl_tutorial.rst  developer_guide.rst  flask_praetorian.base.rst  flask_praetorian.decorators.rst  flask_praetorian.exceptions.rst  flask_praetorian.rst  index.rst  notes.rst  overview.rst  quickstart.rst  requirements.txt  sanic_praetorian.rst  tool_tutorial.rst  tutorial.rst  tutorial_basic.rst  tutorial_blacklist.rst  tutorial_custom.rst  tutorial_refresh.rst
docs/_static/: icon.xcf  logo.xcf
docs/_templates/: side-icon.html  side-links.html
example/: api_tool.py  basic.py  basic_mongo.py  basic_with_sqlalchemy_mixin.py  blacklist.py  custom_claims.py  refresh.py  register.py
example/static/: basic.js  blacklist.js  custom.js  log_in.js  make_request.js  misc.js  refresh.js  timer.js
example/templates/: basic.html  blacklist.html  chatter.html  credentials.html  custom.html  layout.html  refresh.html
flask_praetorian/: __init__.py  base.py  constants.py  decorators.py  exceptions.py  user_mixins.py  utilities.py
flask_praetorian/templates/: registration_email.html  reset_email.html
sanic_praetorian/: __init__.py  base.py  constants.py  decorators.py  exceptions.py  user_mixins.py  utilities.py
sanic_praetorian/templates/: registration_email.html  reset_email.html
test/: conftest.py  test_base.py  test_decorators.py
tests/: conftest.py  models.py  server.py  test_base.py  test_decorators.py  test_exceptions.py  test_integration.py  test_user_mixins.py  test_utilities.py
