[tool.poetry]
name = "sanic-praetorian"
version = "1.3.0"
description = "Strong, Simple, (now async!) and Precise security for Sanic APIs (using jwt)"
authors = ["Rob Dailey <rob@suspected.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://sanic-praetorian.readthedocs.io/en/latest/"
documentation = "https://sanic-praetorian.readthedocs.io/en/latest/"
repository = "https://github.com/pahrohfit/sanic-praetorian"


[tool.poetry.dependencies]
python = "^3.7"
pyjwt = "^2.0"
pendulum = "^2.1"
passlib = "^1.7"
sanic = "^22.6.0"
sanic-ext = "^22.6.2"
simple-settings = "^1.2.0"
Jinja2 = "^3.1.2"
sanic-mailing = {git = "https://github.com/pahrohfit/sanic-mailing.git", rev = "development"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.7"
bcrypt = "^3.1"
ipdb = "^0.12.0"
toml = "^0.10.0"
#plummet = {version = "^0.2.1", extras = ["time-machine"]}
plummet = {version = "^1.1", extras = ["time-machine"]}
sanic-testing = "^22.6.0"
sanic-ext = "^22.6.2"
pytest-asyncio = "^0.18.3"
tortoise-orm = "^0.19.2"
nest-asyncio = "^1.5.5"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
