[tool.poetry]
name = "flask-praetorian"
version = "1.3.0"
description = "Strong, Simple, and Precise security for Flask APIs (using jwt)"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://flask-praetorian.readthedocs.io/en/latest/"
documentation = "https://flask-praetorian.readthedocs.io/en/latest/"
repository = "https://github.com/dusktreader/flask-praetorian"


[tool.poetry.dependencies]
python = "^3.7"
pyjwt = "^2.0"
pendulum = "^2.1"
passlib = "^1.7"
flask-buzz = ">=0.1.7"
flask-mail = "^0.9.1"
flask = ">=1.0, <3.0"

[tool.poetry.dev-dependencies]
flask-cors = "^3.0"
flask-sqlalchemy = "^2.3"
pytest = "^6.2.5"
pytest-flask = "^1.0"
sphinx = "^1.8"
sphinx-view = "^0.2.0"
flake8 = "^3.7"
bcrypt = "^3.1"
ipdb = "^0.12.0"
toml = "^0.10.0"
plummet = {version = "^0.2.1", extras = ["time-machine"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
