[tool.poetry]
name = "flask-praetorian"
version = "1.6.1"
description = "Strong, Simple, and Precise security for Flask APIs (using jwt)"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://flask-praetorian.readthedocs.io/en/latest/"
documentation = "https://flask-praetorian.readthedocs.io/en/latest/"
repository = "https://github.com/dusktreader/flask-praetorian"


[tool.poetry.dependencies]
python = "^3.8"
pyjwt = "^2.0"
pendulum = "^3.0"
passlib = "^1.7"
flask-buzz = "^3.1"
flask = ">=2.0, <4.0"
flask-mailman = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flask-sqlalchemy = "^3.1"
flask-cors = "^3.0"
pytest = "^7"
pytest-flask = "^1.0"
sphinx = "^1.8"
sphinx-view = "^0.2.0"
bcrypt = "^3.1"
ipdb = "^0.12.0"
toml = "^0.10.0"
plummet = {version = "^1.2.1", extras = ["time-machine"]}
ruff = "^0.1.6"
pytest-random-order = "^1.1.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--random-order",
    "--cov=flask_praetorian",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
